ECMS-3600 UI bug on creating new TaxonomyTree * Fix description: ** Problem analysis *** Wrong css of HTML component, wrong usage of div element *** The icon and the boolean value was add to different div tag **How is the problem fixed?: Fix align css, change div element to span element Add the icon and the boolean value to the same <div> tag.

--- a/apps/portlet-administration/src/main/webapp/skin/webui/component/admin/DefaultStylesheet.css
+++ b/apps/portlet-administration/src/main/webapp/skin/webui/component/admin/DefaultStylesheet.css
@@ -682,7 +682,12 @@ float: left;
 .UINodeTypeSearh {
   padding: 0 0 10px;
 }
-
+.UINodeTypeSelector .AllDocument {
+    text-align: center;
+}
+.UINodeTypeSelector .AllDocument .checkbox {
+  margin-left: 5px;
+}
 .UINodeTypeSearh td {
   vertical-align: middle;
 }
